--- a/components/ProfileCard.css
+++ b/components/ProfileCard.css
@@ -268,6 +268,12 @@
   bottom: 2px;
   opacity: calc(1.75 - var(--pointer-from-center));
 }
+/* Make image always visible on mobile */
+@media (max-width: 768px) {
+  .pc-avatar-content .avatar {
+    opacity: 1 !important;
+  }
+}
 
 .pc-avatar-content::before {
   /* display: none; */
