remove transform to make card visible

--- a/components/ProfileCard.css
+++ b/components/ProfileCard.css
@@ -291,10 +291,10 @@
     --card-opacity: 1 !important;
   }
 
-    /* .pc-card {
+    .pc-card {
       transform: none !important;
       transition: none !important;
-    } */
+    }
 
   .pc-shine {
     opacity: 0.3 !important;
